Fix the text is text not being visible in markdown preview editor

--- a/rurusetto/users/static/css/index.css
+++ b/rurusetto/users/static/css/index.css
@@ -501,6 +501,10 @@ button.accordion-button:focus {
     filter: invert(0.4);
 }
 
+.markdown-body p, label, li {
+    color: inherit;
+}
+
 /*Class use in JS*/
 
 .hidden {
